# ai-code-review

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  README.md.old  celery_app.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt  worker.py
.archive/: 001-cortexreview-platform-FREEZE.md
.github/: copilot-instructions.md  dependabot.yml
.github/copilot/: README.md  commands.md  workspace-commands.md
.github/workflows/: codeql.yml  hadolint.yml
.specify/memory/: constitution.md
adapters/: base.py  gitea.py  github.py
codereview/: copilot.py
docs/: Build-Step-1.md  OLD_Documentation.md  PRD.md
gitea/: client.py
models/: __init__.py  feedback.py  indexing.py  mcp.py  platform.py  review.py
plans/: test-endpoint-configuration.md
prompts/: code-review-pr.md
repositories/: __init__.py  constraints.py  feedback.py  knowledge.py
scripts/: backup_supabase.sh  docker-entrypoint.sh  export_from_external.sh  import_to_local.sh  init_supabase.py  preflight_check.py  resource_check.py  restore_supabase.sh  test_supabase.py
scripts/sql/: 001_create_extension.sql  002_create_knowledge_base.sql  003_create_learned_constraints.sql  004_create_feedback_audit_log.sql  005_create_vector_indexes.sql  006_create_functions.sql  007_create_migration_table.sql  008_grant_permissions.sql
services/: __init__.py  feedback.py  indexing.py
specs/001-prompts-config-refactor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-prompts-config-refactor/checklists/: requirements.md
specs/001-prompts-config-refactor/contracts/: openapi.yaml
specs/002-local-supabase-docker/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-local-supabase-docker/checklists/: requirements.md
specs/002-local-supabase-docker/contracts/: backup-procedures.md  migration-procedures.md  supabase-initialization.md
tests/: __init__.py  conftest.py
tests/contract/: __init__.py  test_feedback.py  test_indexing.py  test_mcp.py  test_metrics.py  test_tasks.py  test_webhook.py
tests/fixtures/: __init__.py  test_configs.py  webhook_payloads.py
tests/integration/: test_edge_cases.py  test_feedback_loop.py  test_mcp_flow.py  test_metrics_flow.py  test_rag_flow.py  test_review_flow.py
tests/unit/: test_constraint_repository.py  test_data_governance.py  test_degradation.py  test_feedback_repository.py  test_gitea_adapter.py  test_github_adapter.py  test_indexing_service.py  test_knowledge_repository.py  test_mcp.py  test_metrics.py  test_platform.py  test_webhook_endpoint.py  test_worker.py
tests/validation/: __init__.py  constitution_compliance.py
utils/: config.py  data_governance.py  degradation.py  logger.py  metrics.py  prompt_loader.py  secrets.py
